--- a/package.json
+++ b/package.json
@@ -4,13 +4,23 @@
   "description": "入职大作业及练习代码",
   "main": "index.js",
   "scripts": {
-    "start": "browser-sync start --port 8086 --server --startPath front --files front/*",
-    "sass": "node-sass style/index.scss front/index.css --watch style/index.scss"
+    "start": "browser-sync start --server --files dist/*,index.html",
+    "build": "webpack --watch"
   },
   "author": "firstfly",
   "license": "ISC",
   "dependencies": {
+    "babel-loader": "^6.3.2",
+    "css-loader": "^0.26.2",
     "mongodb": "^2.2.24",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "sass-loader": "^6.0.2",
+    "style-loader": "^0.13.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.23.1",
+    "babel-preset-es2015": "^6.22.0",
+    "extract-text-webpack-plugin": "^2.0.0",
+    "webpack": "^2.2.1"
   }
 }
