--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "brs": "browser-sync start --server --files dist/*,index.html",
     "build": "webpack --watch",
-    "start":"node server.js"
+    "start": "node server.js"
   },
   "author": "firstfly",
   "license": "ISC",
@@ -23,6 +23,7 @@
   "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
     "extract-text-webpack-plugin": "^2.0.0",
     "webpack": "^2.2.1"
   }
